--- a/CSS/index.css
+++ b/CSS/index.css
@@ -63,7 +63,8 @@ a {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  font-size: 3rem;
+  font-size: 3.5rem;
+  font-weight: 200;
   border-bottom: solid 1px grey;
   max-width: 500px;
   margin: 0 auto;
@@ -95,12 +96,11 @@ a {
   padding: 10px;
 }
 
-#logo{
+#logo {
   padding: 10px;
-  margin:10px;
+  margin: 10px;
   max-width: 60px;
   max-height: 60px;
-  
 }
 
 .social-icon {
@@ -186,4 +186,21 @@ a {
 .project-description {
   padding: 0px 30px 30px 30px;
   color: grey;
+}
+
+/* About me page styling */
+
+#about-page-title {
+  max-width: 100%;
+  max-height: 200px;
+  position: absolute;
+  bottom: -120px;
+}
+
+#about-me-section {
+  margin: 120px auto;
+  padding: 30px;
+  color: white;
+  border-bottom: solid white 2px;
+  border-top: solid white 2px;
 }
