--- a/CSS/index.css
+++ b/CSS/index.css
@@ -92,13 +92,13 @@ a {
 
 #socials {
   display: inline-block;
-  margin: 10px;
+  margin: 5px;
   padding: 10px;
 }
 
 #logo {
   padding: 10px;
-  margin: 10px;
+  margin: 5px;
   max-width: 60px;
   max-height: 60px;
 }
@@ -123,7 +123,7 @@ a {
   max-width: 350px;
   height: 70px;
   position: relative;
-  margin: 5px;
+  margin: 5px auto;
 }
 
 .banner-text {
@@ -154,7 +154,7 @@ a {
 #project-list {
   margin: 60px auto 10px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
   flex-wrap: wrap;
   border-bottom: solid white 2px;
@@ -164,7 +164,7 @@ a {
   border: solid white 3px;
   border-radius: 5%;
   overflow: hidden;
-  max-width: 350px;
+  max-width: 600px;
   min-width: 250px;
   margin: 10px;
 }
@@ -206,4 +206,5 @@ a {
   color: white;
   border-bottom: solid white 2px;
   border-top: solid white 2px;
+  max-width: 600px;
 }
