--- a/CSS/index.css
+++ b/CSS/index.css
@@ -152,10 +152,11 @@ a {
 }
 
 #project-list {
-  margin: 60px auto 10px;
+  margin: 80px auto 10px;
   display: flex;
   justify-content: space-around;
   width: 100%;
+  max-width: 1700px;
   flex-wrap: wrap;
   border-bottom: solid white 2px;
   padding-bottom: 30px;
