--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,53 +1,38 @@
 html,
 body {
   height: 100%;
-  padding: 0;
-  margin: 0;
+  padding: 0px;
+  margin: 0px;
   overflow-x: hidden;
 }
+
 body {
   background-color: rgb(42, 43, 46);
   border-radius: 10px;
-  padding: 20px;
   border: solid white 2px;
   height: 100dvh;
   box-sizing: border-box;
-  overflow-y: auto;
 }
-@font-face {
-  font-family: "japanBrush";
-  src: url("../assets/fonts/JAPAB___.TTF") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
+
 @font-face {
   font-family: "japanTourist";
   src: url("../assets/fonts/Japanese_Tourist.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
+
 @font-face {
   font-family: "jetBrains";
   src: url("../assets/fonts/JetBrainsMono-Thin.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
-@font-face {
-  font-family: "splash";
-  src: url("../assets/fonts/RoughSplash.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
+
 h1 {
   color: whitesmoke;
   margin: 0;
   font-family: "japanTourist";
   padding: 10px;
-}
-
-h2 {
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 h3 {
@@ -56,9 +41,18 @@ h3 {
   margin: 10px;
   font-family: "jetBrains";
 }
+
 a {
   text-decoration: none;
 }
+
+#Landing {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 #myName {
   display: flex;
   justify-content: space-around;
@@ -76,6 +70,15 @@ a {
   justify-content: space-around;
 }
 
+#profPicContainer {
+  padding: 30px;
+}
+
+#title {
+  margin-bottom: 150px;
+  padding: 20px;
+}
+
 #aiProfPic {
   border-radius: 50%;
   display: block;
@@ -84,128 +87,81 @@ a {
   height: 250px;
 }
 
-#header {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 30px;
-}
-
 #socials {
-  display: inline-block;
-  margin: 5px;
-  padding: 10px;
-}
-
-#logo {
-  padding: 10px;
-  margin: 5px;
-  max-width: 60px;
-  max-height: 60px;
+  display: flex;
+  justify-content: space-around;
+  margin: 20px;
 }
 
 .social-icon {
-  max-height: 41px;
-  max-width: 41px;
+  max-height: 50px;
+  max-width: 50px;
   margin: 10px;
 }
 
-#nav-container {
-  padding: 10px;
-  margin-top: 30px;
-}
-
-.banner-btn {
-  background-image: url("../assets/brush-stroke-bg.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 100%;
-  width: 100%;
-  max-width: 350px;
-  height: 70px;
-  position: relative;
-  margin: 5px auto;
-}
-
-.banner-text {
-  position: absolute;
-  top: 25%;
-  left: 10%;
-  color: black;
-  font-family: "splash";
-  font-weight: 100;
-}
-
-/* projects page css below */
-
-.page-title {
-  position: relative;
+.techIcons {
   display: flex;
   justify-content: space-around;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin: 30px 30px;
+  padding: 10px;
+  border-bottom: solid 2px whitesmoke;
 }
-#projects-page-title {
-  max-width: 100%;
-  max-height: 200px;
-  position: absolute;
-  bottom: -100px;
-  z-index: -1;
+
+.techIcon {
+  max-width: 50px;
+  max-height: 50px;
+  padding: 10px;
+  margin: 5px;
 }
 
 #project-list {
-  margin: 80px auto 10px;
+  margin: 30px auto;
   display: flex;
   justify-content: space-around;
   width: 100%;
   max-width: 1700px;
   flex-wrap: wrap;
-  border-bottom: solid white 2px;
-  padding-bottom: 30px;
 }
+
+#project-list-header{
+  width: 80%;
+  max-width: 500px;
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
+
 .project-card {
   border: solid white 3px;
   border-radius: 5%;
   overflow: hidden;
   max-width: 600px;
   min-width: 250px;
-  margin: 10px;
+  margin: 30px;
 }
-.project-title {
+.card-header {
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
   background-color: grey;
+}
+
+.project-title {
   margin: 0;
   padding: 20px;
-  font-family: "splash";
-  font-size: 1rem;
-  font-weight: 100;
+  font-family: "Montserrat";
+  font-size: 1.2rem;
   text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black,
     1px 1px 0 black;
 }
 
 .project-image {
   max-width: 100%;
-  padding: 5px;
   box-sizing: border-box;
 }
 
 .project-description {
-  padding: 0px 30px 30px 30px;
+  padding: 0px 20px 20px 20px;
+  margin: 10px;
   color: grey;
-}
-
-/* About me page styling */
-
-#about-page-title {
-  max-width: 100%;
-  max-height: 200px;
-  position: absolute;
-  bottom: -120px;
-  z-index: -1;
-}
-
-#about-me-section {
-  margin: 120px auto 30px;
-  padding: 30px;
-  color: white;
-  border-bottom: solid white 2px;
-  border-top: solid white 2px;
-  max-width: 600px;
 }
