--- a/CSS/index.css
+++ b/CSS/index.css
@@ -112,6 +112,38 @@ ul svg {
   overflow: hidden;
 }
 
+/* footer styling */
+
+footer {
+  text-align: center;
+}
+
+.footer-text {
+  line-height: 1.5;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2rem;
+}
+
+.footer-text-box ul {
+  font-size: calc(var(--base-font-size) * 0.85);
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-text-box li {
+  line-height: 2;
+}
+
+.footer-title {
+  margin: 2rem 0;
+}
+
+.footer-section .social {
+  fill: var(--slateGrey);
+}
+
 @media (min-width: 750px) {
   :root {
     --base-font-size: 1.125rem;
@@ -137,5 +169,11 @@ ul svg {
   }
   .icons {
     justify-content: flex-start;
+  }
+  footer {
+    text-align: left;
+  }
+  .footer-text {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
