--- a/CSS/index.css
+++ b/CSS/index.css
@@ -12,6 +12,7 @@
   --deepGrey: #333333;
   --mediumGrey: #777777;
   --corners: 24px 0;
+  --corners-small: 10px 0;
   --base-font-size: 1rem;
 }
 
@@ -139,12 +140,31 @@ main {
   gap: 3rem;
 }
 
-.project-card ul li {
+.light-border {
+  border: 1px solid var(--slateGrey);
+}
+
+.project-card ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.project-card li {
   color: var(--gunmetal);
   background-color: var(--electric);
-  border-radius: var(--corners);
-  padding: 0.6rem;
-  list-style: none;
+  border-radius: var(--corners-small);
+  padding: 0.5rem;
+  font-size: calc(var(--base-font-size) * 0.85);
+}
+
+.project-card img {
+  grid-row: 1/2;
+  margin: 0 auto;
 }
 
 /* footer styling */
@@ -210,5 +230,21 @@ footer {
   }
   .footer-text {
     grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 850px) {
+  .project-card {
+    grid-template-columns: 1fr 1fr;
+    text-align: left;
+  }
+
+  .project-card img {
+    grid-column: 2;
+    min-height: 200px;
+  }
+
+  .project-card ul {
+    justify-content: flex-start;
   }
 }
