--- a/CSS/index.css
+++ b/CSS/index.css
@@ -29,6 +29,7 @@ body {
   font-size: var(--base-font-size);
   background-color: var(--gunmetal);
   color: var(--lightGrey);
+  font-family: "Work Sans", sans-serif;
 }
 
 .wrapper {
@@ -39,7 +40,9 @@ body {
 
 h1 {
   margin: 0;
-  font-size: calc(var(--base-font-size) * 2.9);
+  font-size: calc(var(--base-font-size) * 2.5);
+  font-family: "Orbitron", sans-serif;
+  letter-spacing: 0.15rem;
 }
 
 h2 {
@@ -48,6 +51,8 @@ h2 {
   text-transform: uppercase;
   color: var(--electric);
   letter-spacing: 0.25em;
+  font-family: "Orbitron", sans-serif;
+  letter-spacing: 0.1rem;
 }
 
 h3 {
@@ -159,7 +164,8 @@ main {
   background-color: var(--electric);
   border-radius: var(--corners-small);
   padding: 0.5rem;
-  font-size: calc(var(--base-font-size) * 0.85);
+  font-size: calc(var(--base-font-size) * 0.7);
+  font-family: 'Orbitron', sans-serif;
 }
 
 .project-card img {
