add hover effect to project cards

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -182,9 +182,9 @@ main {
   margin: 0 auto;
 }
 
-/* .project-card:hover {
+.project-card:hover {
   box-shadow: #39ff14 0 0 20px 1px;
-} */
+}
 
 /* footer styling */
 
