--- a/CSS/index.css
+++ b/CSS/index.css
@@ -19,6 +19,15 @@ html {
   box-sizing: border-box;
   color-scheme: light dark;
 }
+
+html:has(#light-dark-switch #light:checked) {
+  color-scheme: light;
+}
+
+html:has(#light-dark-switch #dark:checked) {
+  color-scheme: dark;
+}
+
 *,
 *::before,
 *::after {
@@ -246,6 +255,9 @@ footer {
   .footer-text {
     grid-template-columns: repeat(3, 1fr);
   }
+  .radio-switch {
+    justify-content: flex-end;
+  }
 }
 
 @media (min-width: 850px) {
@@ -263,5 +275,91 @@ footer {
 
   .project-card ul {
     justify-content: flex-start;
+  }
+}
+
+@layer switch {
+  .radio-switch {
+    border: none;
+    padding: 0;
+    white-space: nowrap;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 2rem;
+  }
+
+  .radio-switch legend {
+    font-size: 2px;
+    opacity: 0;
+    position: absolute;
+  }
+
+  .radio-switch label {
+    display: inline-block;
+    line-height: 2;
+    font-size: 0.9rem;
+    position: relative;
+    z-index: 2;
+  }
+
+  .radio-switch input {
+    opacity: 0;
+    position: absolute;
+  }
+
+  .radio-switch label:first-of-type {
+    padding-right: 5em;
+  }
+
+  .radio-switch label:last-child {
+    margin-left: -4.25em;
+    padding-left: 5em;
+  }
+
+  .radio-switch:focus-within label:first-of-type:after {
+    box-shadow: 0 0 0 2px #fff, 0 0 0 4px var(--electric);
+  }
+
+  .radio-switch label:first-of-type:before,
+  .radio-switch label:first-of-type:after {
+    border: 1px solid var(--gunmetal);
+    content: "";
+    height: 2em;
+    overflow: hidden;
+    pointer-events: none;
+    position: absolute;
+    vertical-align: middle;
+  }
+
+  .radio-switch label:first-of-type:before {
+    background: #fef6e4;
+    border: 1px solid var(--gunmetal);
+    border-radius: 100%;
+    position: absolute;
+    right: -0.075em;
+    transform: translateX(0em);
+    transition: transform 0.2s ease-in-out;
+    width: 2em;
+    z-index: 2;
+  }
+
+  .radio-switch label:first-of-type:after {
+    background: var(--electric);
+    border-radius: 1em;
+    margin: 0 1em;
+    transition: background 0.2s ease-in-out;
+    width: 4em;
+  }
+
+  .radio-switch input:first-of-type:checked ~ label:first-of-type:after {
+    background: var(--gunmetal);
+  }
+
+  .radio-switch input:first-of-type:checked ~ label:first-of-type:before {
+    transform: translateX(-2em);
+  }
+
+  .radio-switch input:last-of-type:checked ~ label:last-of-type {
+    z-index: 1;
   }
 }
